<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="EVERYDAY">EVERYDAY</string>
    <string name="FRI">FRI</string>
    <string name="MOD">Style</string>
    <string name="MON">MON</string>
    <string name="Music">Music</string>
    <string name="My_device">My Device</string>
    <string name="NO">On</string>
    <string name="Name1">Name:</string>
    <string name="OFF">Off</string>
    <string name="Operating_Instructions">User Guide</string>
    <string name="Operation">Operat:</string>
    <string name="Recording">Tape</string>
    <string name="Rename">Rename</string>
    <string name="SAT">SAT</string>
    <string name="SUN">SUN</string>
    <string name="Speed">Speed</string>
    <string name="THU">THU</string>
    <string name="TUE">TUE</string>
    <string name="Timing">Timing</string>
    <string name="Version">Version: v</string>
    <string name="WED">WED</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="adjust">Adjust</string>
    <string name="app_name">Trick Light</string>
    <string name="audio_db_title_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="ble_permissions">Bluetooth connection requires access to Nearby Devices permission</string>
    <string name="brightness">brightness</string>
    <string name="cencel">Cancel</string>
    <string name="change">Background</string>
    <string name="classic">STANDARD</string>
    <string name="colorselect">Color selection</string>
    <string name="common">PRESET</string>
    <string name="connpwd2">Connection requires password:</string>
    <string name="contact_us">Please contact us. 0755-84553722-802</string>
    <string name="delete">Delete</string>
    <string name="deviceerror">The following device is illegal</string>
    <string name="dissimilarity">Error,enter the password again!</string>
    <string name="error1">Names must be unique!</string>
    <string name="gotoset">Yes</string>
    <string name="group">Group</string>
    <string name="group_management">Group Manage</string>
    <string name="hello_world">Hello world!</string>
    <string name="huancai">M</string>
    <string name="huancainum">LED Qty:</string>
    <string name="huancainummax">Input the 0~1024 NO.</string>
    <string name="huancaitype">LED Type:</string>
    <string name="huancaitype2">LED Type:</string>
    <string name="huancaixunxu">RGB Output Sequence:</string>
    <string name="huancaixunxu2">RGB Output Sequence:</string>
    <string name="huancaixunxutype">Style Loop:</string>
    <string name="huandong">↑ Please select a device</string>
    <string name="inputpwd">Please input a password</string>
    <string name="language">en</string>
    <string name="light">lamp</string>
    <string name="limit">Number exceeded APP limit, please disconnect other bluetooth.</string>
    <string name="management">Group Manage</string>
    <string name="mod2">Mod </string>
    <string name="name">Trick Light</string>
    <string name="new_group">New group</string>
    <string name="no_song">No MP3 files found!</string>
    <string name="not_find_version">Version: v1.0</string>
    <string name="notsupport">This phone does not support this feature,Failed to get audio data!</string>
    <string name="numerror">Input the 0~1024 NO.</string>
    <string name="ok">Ok</string>
    <string name="open">Enable:</string>
    <string name="open_bluetooth">Please turn on Bluetooth</string>
    <string name="open_gps_msg">Please turn on GPS positioning, otherwise we will not be able to connect Bluetooth devices.</string>
    <string name="permission_close">No</string>
    <string name="permission_msg">Happy Lighting needs to locate permissions. Do you want to set them?</string>
    <string name="permission_msg0">* If rejected, the APP cannot connect to the device, and the APP will automatically exit.</string>
    <string name="playMod1">Single player</string>
    <string name="playMod2">Shuffle Playback</string>
    <string name="playMod3">List cycle</string>
    <string name="pwdisok">Correct password!</string>
    <string name="qicai">S</string>
    <string name="repeat">Input a password</string>
    <string name="resetname">Rename</string>
    <string name="resetpwd">Modify the password</string>
    <string name="rmod1">Classic</string>
    <string name="rmod2">Soft</string>
    <string name="rmod3">Dynamic</string>
    <string name="rmod4">Disco</string>
    <string name="rmod5">Phone Mic</string>
    <string name="rmod6">Device Mic</string>
    <string name="search_menu_title">Search</string>
    <string name="select_device">Please select the device!</string>
    <string name="send">OK</string>
    <string name="send_ok">Success!</string>
    <string name="setfalse">Currently unable to change the password!</string>
    <string name="setfalse2">Currently unable to change the password!</string>
    <string name="sethuancai">Dream Settings</string>
    <string name="setok">Sucess</string>
    <string name="setqicai">Rainbow Settings</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="time">Time:</string>
    <string name="voice_control">Mic</string>
    <string name="w">RGB</string>
    <string name="ww"> </string>
    <string name="yaoyiyao">Shake</string>
</resources>
