<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#00000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@drawable/corners_bg"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <RelativeLayout
            android:id="@+id/re1"
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <TextView
                android:textSize="26dp"
                android:textColor="#ffffffff"
                android:id="@+id/tx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/time"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <com.qh.WheelView.WheelView
                android:id="@+id/hour_wheelview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:textSize="30dp"
                android:textColor="#ffffffff"
                android:id="@+id/tx3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
            <com.qh.WheelView.WheelView
                android:id="@+id/minute_wheelview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/re2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@+id/re1"
            android:layout_alignParentLeft="true">
            <TextView
                android:textSize="20dp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:id="@+id/tx_mon"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/MON"/>
            <TextView
                android:textSize="20dp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:id="@+id/tx_wed"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/WED"
                android:layout_toRightOf="@+id/tx_tue"
                android:layout_alignParentTop="true"/>
            <TextView
                android:textSize="20dp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:id="@+id/tx_fri"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="@string/FRI"
                android:layout_alignLeft="@+id/tx_mon"
                android:layout_alignParentBottom="true"/>
            <TextView
                android:textSize="20dp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:id="@+id/tx_sat"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/SAT"
                android:layout_toRightOf="@+id/tx_fri"
                android:layout_alignParentBottom="true"/>
            <TextView
                android:textSize="20dp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:id="@+id/tx_tue"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="@string/TUE"
                android:layout_alignLeft="@+id/tx_sat"
                android:layout_alignParentTop="true"/>
            <TextView
                android:textSize="20dp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:id="@+id/tx_thu"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginLeft="7dp"
                android:text="@string/THU"
                android:layout_toRightOf="@+id/tx_wed"
                android:layout_alignParentTop="true"/>
            <TextView
                android:textSize="20dp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:id="@+id/tx_sun"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/SUN"
                android:layout_toRightOf="@+id/tx_sat"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/re3"
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/re2">
            <ImageView
                android:id="@+id/img11"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_light_u"
                android:layout_toRightOf="@+id/tx11"/>
            <ImageView
                android:id="@+id/img12"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_light_n"
                android:layout_toRightOf="@+id/img_open"/>
            <TextView
                android:textSize="20dp"
                android:textColor="#ffffffff"
                android:id="@+id/tx11"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/Operation"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <ImageView
                android:id="@+id/img_open"
                android:layout_width="48dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_close"
                android:layout_toRightOf="@+id/img11"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/re4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/re3">
            <TextView
                android:textSize="20dp"
                android:textColor="#ffffffff"
                android:id="@+id/tx13"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/open"
                android:layout_centerVertical="true"/>
            <ImageView
                android:id="@+id/img_time_open"
                android:layout_width="48dp"
                android:layout_height="24dp"
                android:layout_marginLeft="50dp"
                android:src="@drawable/ic_close"
                android:layout_toRightOf="@+id/tx13"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <TextView
            android:textSize="23dp"
            android:textColor="#ffffffff"
            android:gravity="center"
            android:id="@+id/OK"
            android:background="@drawable/btn_bg3"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="9dp"
            android:text="@string/ok"
            android:layout_below="@+id/re4"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:textSize="23dp"
            android:textColor="#ffffffff"
            android:gravity="center"
            android:id="@+id/Cancel"
            android:background="@drawable/btn_bg4"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="9dp"
            android:layout_marginRight="20dp"
            android:text="@string/cencel"
            android:layout_below="@+id/re4"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</RelativeLayout>
