<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#00000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/corners_bg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="40dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:id="@+id/rel_title"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:padding="9dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="0dp"
                android:src="@drawable/ic_gantanhao"/>
            <TextView
                android:textSize="20dp"
                android:textColor="#ff000000"
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/resetpwd"
                android:layout_centerVertical="true"/>
            <View
                android:background="#ff17b94c"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rel_msg"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">
            <EditText
                android:textColor="#ff000000"
                android:textColorHint="#90000000"
                android:id="@+id/et_pwd1"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputpwd"
                android:maxLength="4"
                android:inputType="number"/>
            <EditText
                android:textColor="#ff000000"
                android:textColorHint="#90000000"
                android:id="@+id/et_pwd2"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat"
                android:maxLength="4"
                android:layout_below="@+id/et_pwd1"
                android:inputType="number"/>
        </RelativeLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <TextView
                android:textSize="23dp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:id="@+id/OK"
                android:background="@drawable/btn_bg3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/ok"
                android:layout_weight="1"/>
            <TextView
                android:textSize="23dp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:id="@+id/Cancel"
                android:background="@drawable/btn_bg4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/cencel"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
