<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel_main"
    android:background="@drawable/ic_bg"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:background="#40ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <RelativeLayout
            android:id="@+id/lin_back"
            android:background="#00000000"
            android:layout_width="90dp"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_back_u"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <TextView
            android:textSize="20dp"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sethuancai"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <com.qh.WheelView.WheelView
        android:id="@+id/timing_wheelview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp">
        <RelativeLayout
            android:id="@+id/rel_1"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:textSize="18dp"
                android:textColor="#ffffffff"
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/huancaitype"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <Spinner
                android:gravity="center"
                android:id="@+id/spinner_huancaitype"
                android:background="#ffffffff"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/textView1"
                android:layout_centerVertical="true"/>
            <TextView
                android:textColor="#ff000000"
                android:gravity="center"
                android:id="@+id/tv_shuancaitype"
                android:background="#ffffffff"
                android:paddingLeft="4dp"
                android:visibility="gone"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="TM1814"
                android:layout_toRightOf="@+id/textView1"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rel_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/rel_1"
            android:layout_alignParentLeft="true">
            <TextView
                android:textSize="18dp"
                android:textColor="#ffffffff"
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/huancaixunxu"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <Spinner
                android:gravity="center"
                android:id="@+id/spinner_rgb"
                android:background="#ffffffff"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/textView2"
                android:layout_centerVertical="true"/>
            <TextView
                android:textColor="#ff000000"
                android:gravity="center"
                android:id="@+id/tv_srgb"
                android:background="#ffffffff"
                android:paddingLeft="4dp"
                android:visibility="gone"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="RGBW"
                android:layout_toRightOf="@+id/textView2"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rel_3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/rel_2"
            android:layout_alignParentLeft="true">
            <TextView
                android:textSize="18dp"
                android:textColor="#ffffffff"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/huancaixunxutype"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <Spinner
                android:gravity="center"
                android:id="@+id/spinner_xunhuan"
                android:background="#ffffffff"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/textView3"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rel_4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/rel_3"
            android:layout_alignParentLeft="true">
            <TextView
                android:textSize="18dp"
                android:textColor="#ffffffff"
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/huancainum"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
            <EditText
                android:textSize="16dp"
                android:textColor="#ffffffff"
                android:textColorHint="#ffffffff"
                android:id="@+id/et_input"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:hint="@string/huancainummax"
                android:layout_toRightOf="@+id/textView4"
                android:layout_centerVertical="true"
                android:inputType="number"/>
        </RelativeLayout>
        <Button
            android:textSize="20dp"
            android:textColor="#ffffffff"
            android:id="@+id/btn_send"
            android:background="@drawable/btn_bg1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/send"
            android:layout_below="@+id/rel_4"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>
